# elasticsearch_in_action

./: Cargo.toml  README.md  TODO.md  tweets.json
docker/: cluster_with_kibana.yaml  simple.yaml  single_node_with_kibana.yaml
src/: lib.rs  main.rs  tweet.rs
