[package]
name = "elasticsearch_in_action"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.32", features = ["derive"] }
derive_more = "0.99.17"
elasticsearch = "8.5.0-alpha.1"
serde = "1.0.152"
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
